<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thempb"
        android:textSize="30dp"
        android:textColor="#fc5252"

        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TableRow
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/ten"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:id="@+id/edtTen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/ten"
            />


    </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/diachi"
                android:layout_marginRight="10dp"
                />
            <EditText
                android:id="@+id/edtDiaChi"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/diachi"
                />


        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/sodienthoai"
                android:layout_marginRight="10dp"
                />
            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/sodienthoai"
                />


        </TableRow>
    </TableLayout>

</LinearLayout>