<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainlogin"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/iconuser" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#dad9d9"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icologin" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tendangnhap" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#dad9d9"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/imgpass" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/matkhau"
                android:inputType="textPassword"
                />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/chkluu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhomatkhau"
            android:layout_gravity="left"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/dangnhap"
        android:background="#dad9d9"
        android:layout_marginTop="20dp"
        />
    

</LinearLayout>